--- a/Suami-Takut-Istri/index.html
+++ b/Suami-Takut-Istri/index.html
@@ -1,1 +1,181 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <title>kaos 4you original | Suami Takut Istri</title>
+    <link rel="canonical" href="https://original-1eq.pages.dev/Suami-Takut-Istri/"/>
+    <meta name="description" content="Kaos ini terbuat dari 100% katun premium, memberikan kenyamanan maksimal saat dikenakan. Bahan yang lembut dan breathable memastikan Anda tetap nyaman, baik saat bersantai di rumah maupun saat berkumpul dengan teman-teman.">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="kaos 4you original | Suami Takut Istri" />
+    <meta property="og:description"
+    content="Kaos ini terbuat dari 100% katun premium, memberikan kenyamanan maksimal saat dikenakan. Bahan yang lembut dan breathable memastikan Anda tetap nyaman, baik saat bersantai di rumah maupun saat berkumpul dengan teman-teman." />
+    <meta name="keywords" content="kaos 4you original, kaos 4you viral, kaos 4you, 4 you, 4you, 4you, kaos 4u">
+    <meta property="og:url" content="/Suami-Takut-Istri/" />
+    <link rel="apple-touch-icon" href="https://images2.imgbox.com/50/5f/dv6bMWCU_o.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://images2.imgbox.com/50/5f/dv6bMWCU_o.png">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/templatemo.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
+    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
+</head>
+<style>
+    p {
+    text-align: justify;
+}
+</style>
+<body>
+    <!-- Header -->
+    <nav class="navbar navbar-expand-lg navbar-light shadow">
+        <div class="container d-flex justify-content-between align-items-center">
+            <a class="navbar-brand text-success logo h1 align-self-center">
+                4YOU
+            </a>
+            <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="templatemo_main_nav">
+                <div class="flex-fill">
+                    <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://original-1eq.pages.dev/">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://style-4u.pages.dev/">4YOU ORIGINAL</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://style-4u.pages.dev/products/">PRODUCTS 4YOU</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </nav>
+    <!-- Close Header -->
+
+    <!-- Modal -->
+    <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="w-100 pt-1 mb-5 text-right">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form action="" method="get" class="modal-content modal-body border-0 p-0">
+                <div class="input-group mb-2">
+                    <input type="text" class="form-control" id="inputModalSearch" name="q" placeholder="Search ...">
+                    <button type="submit" class="input-group-text bg-success text-light">
+                        <i class="fa fa-fw fa-search text-white"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- Start Banner Hero -->
+    <div id="template-mo-zay-hero-carousel" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="0" class="active"></li>
+            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="1"></li>
+            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="container">
+                    <div class="row p-5">
+                        <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                            <img class="img-fluid" src="https://images2.imgbox.com/43/89/Uf6FORQy_o.png" alt="">
+                        </div>
+                        <div class="col-lg-6 mb-0 d-flex align-items-center">
+                            <div class="text-align-left align-self-center">
+                                <h1 class="h1 text-success"><b>Suami Takut Istri</b></h1>
+                                <p>
+                                    Kaos Suami Takut Istri adalah pilihan yang lucu dan penuh humor bagi Anda yang ingin mengekspresikan dinamika kehidupan pernikahan dengan cara yang menghibur. Dari brand "4YOU", kaos ini dirancang khusus untuk para suami yang ingin menunjukkan sisi humoris mereka tentang kehidupan rumah tangga.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="row p-5">
+                        <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                            <img class="img-fluid" src="https://images2.imgbox.com/43/89/Uf6FORQy_o.png" alt="">
+                        </div>
+                        <div class="col-lg-6 mb-0 d-flex align-items-center">
+                            <div class="text-align-left">
+                                <h1 class="h1 text-success"><b>Suami Takut Istri</b></h1>
+                                <p>
+                                    Kaos ini terbuat dari 100% katun premium, memberikan kenyamanan maksimal saat dikenakan. Bahan yang lembut dan breathable memastikan Anda tetap nyaman, baik saat bersantai di rumah maupun saat berkumpul dengan teman-teman.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="row p-5">
+                        <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                            <img class="img-fluid" src="https://images2.imgbox.com/43/89/Uf6FORQy_o.png" alt="">
+                        </div>
+                        <div class="col-lg-6 mb-0 d-flex align-items-center">
+                            <div class="text-align-left">
+                                <h1 class="h1 text-success"><b>Suami Takut Istri</b></h1>
+                                <p>
+                                    Dengan desain yang lucu dan bahan berkualitas tinggi, Kaos Suami Takut Istri dari brand "4YOU" adalah pilihan yang tepat untuk Anda yang ingin menunjukkan sisi humoris dalam kehidupan sehari-hari. Tambahkan kaos ini ke dalam koleksi Anda dan tunjukkan kepribadian Anda dengan percaya diri. Dapatkan segera dan buat pernyataan gaya yang menghibur!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="prev">
+            <i class="fas fa-chevron-left"></i>
+        </a>
+        <a class="carousel-control-next text-decoration-none w-auto pe-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="next">
+            <i class="fas fa-chevron-right"></i>
+        </a>
+    </div>
+    <!-- End Banner Hero -->
+    <!-- Start Categories of The Month -->
+    <section class="container py-5">
+        <div class="row text-center pt-3">
+            <div class="col-lg-6 m-auto">
+                <h1 class="h1">Suami Takut Istriginal</h1>
+                <p>
+                    Desain Humoris: Kaos ini menampilkan tulisan "Suami Takut Istri" yang lucu dan menggemaskan, memberikan sentuhan humor pada penampilan Anda. Desain ini pasti akan memicu tawa dan menarik perhatian di mana pun Anda berada.
+                    Warna Menarik: Dengan pilihan warna yang cerah dan mencolok, kaos ini mudah dipadukan dengan berbagai jenis pakaian, dari celana jeans hingga jogging pants, untuk tampilan yang kasual namun tetap stylish.
+                    Potongan Nyaman: Kaos Suami Takut Istri memiliki potongan yang santai dan trendy, cocok untuk berbagai bentuk tubuh dan ideal untuk penggunaan sehari-hari.
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- End Categories of The Month -->
+    <!-- Start Footer -->
+    <footer class="bg-dark" id="tempaltemo_footer">
+        <div class="container">
+            <div class="row">
+            </div>
+        <div class="w-100 bg-black py-3">
+            <div class="container">
+                <div class="row pt-2">
+                    <div class="col-12">
+                        <p class="text-left text-light">
+                            Copyright &copy; Company 4YOU
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End Footer -->
+
+    <!-- Start Script -->
+    <script src="assets/js/jquery-1.11.0.min.js"></script>
+    <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/templatemo.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <!-- End Script -->
+</body>
+
+</html>
